--- a/index.html
+++ b/index.html
@@ -332,7 +332,29 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.min.js"></script>
-<script src="./slide.js"></script>
+<script src="./slide.js">
+
+var mySwiper = new Swiper('.swiper-container', {
+});
+
+var mySwiper = new Swiper('.swiper-container', {
+  speed: 2000,
+  loop: true,
+	navigation: {
+		nextEl: '.swiper-button-next',
+		prevEl: '.swiper-button-prev'
+	},
+	pagination: {
+		el: '.swiper-pagination',
+		type: 'bullets',
+		clickable: true
+	}
+});
+  
+  
+</script>
+  
+  
 </body>
 
 
