--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class = "logo">
         <a href="">
-          <img src="https://github.com/punch104/Aoba_AnimalClinic/blob/main/logo.png?raw=true" alt="logo">
+          <img src="logo.png" alt="logo">
           <h1>あおば動物病院</h1>
         </a>
       </div>
