--- a/index.html
+++ b/index.html
@@ -332,8 +332,9 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.min.js"></script>
-<script src="./slide.js">
 
+<script>
+	
 var mySwiper = new Swiper('.swiper-container', {
 });
 
@@ -352,6 +353,7 @@ var mySwiper = new Swiper('.swiper-container', {
 });
   
   
+	
 </script>
   
   
